# MGame

backend/bff_service/: Taskfile.yml  pyproject.toml
backend/bff_service/docker/: local-docker-compose.yml
backend/bff_service/env/: local.sh
backend/bff_service/src/app/core/config/: __init__.py
backend/bff_service/src/app/db/: connection.py
backend/bff_service/src/app/db/migrations/: 20250422183547_init.down.sql  20250422183547_init.up.sql
backend/core_service/: Dockerfile  pyproject.toml
backend/core_service/docker/: local-docker-compose.yml
backend/core_service/env/: local.sh
backend/core_service/src/app/: __init__.py  builder.py
backend/core_service/src/app/core/: new_types.py
backend/core_service/src/app/core/config/: __init__.py  reids.py
backend/core_service/src/app/db/: connection.py
backend/core_service/src/app/db/migrations/: 20250422183547_init.down.sql  20250422183547_init.up.sql
backend/core_service/src/app/models/game/: __init__.py
backend/core_service/src/app/repositories/: providers.py
backend/core_service/src/app/repositories/game/: __init__.py
backend/core_service/src/app/services/: providers.py
backend/core_service/src/app/services/game/: __init__.py
backend/user_service/: pyproject.toml
backend/user_service/docker/: local-docker-compose.yml
backend/user_service/env/: local.sh
backend/user_service/src/app/: __init__.py  builder.py
backend/user_service/src/app/core/config/: __init__.py
backend/user_service/src/app/db/: connection.py
backend/user_service/src/app/repositories/: providers.py
(+29 files in other folders)
